gccida/g1/complete_array_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/complete_array_type/src/c-decl.c:4429:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/complete_array_type/src/c-decl.c:4430:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/complete_array_type/src/c-decl.c:4448:18: error: expected expression
i = ( tree_node *)high[3]; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/complete_array_type/src/c-decl.c:4448:7: error: use of undeclared identifier 'tree_node'
i = ( tree_node *)high[3]; 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/complete_array_type/src/obj/c-decl.o] Error 1
